# UR-ROS-Project

./: README.md
aruco_broadcaster/: CMakeLists.txt  Readme.md  package.xml
aruco_broadcaster/config/: aruco_mapping.rviz  pl2esaii.yaml  tablesetup-ioc-aruco.yaml  tablesetup-ioc-calib.yaml  tablesetup-pl2esaii.yaml  tablesetup-pl2esaii_sim.yaml
aruco_broadcaster/launch/: aruco_broadcaster.launch.py  aruco_pl2.launch.py
aruco_broadcaster/src/: aruco_broadcaster.cpp
aruco_broadcaster/srv/: GetMarkerTf.srv
aruco_ros/aruco_ros/src/: marker_publish.cpp  simple_double.cpp  simple_single.cpp
chesslab_setup2/: CMakeLists.txt  README.md  package.xml
chesslab_setup2/config/: chesslab_controllers.yaml  gui.config  initial_positions.yaml
chesslab_setup2/config/ur3/: visual_parameters.yaml
chesslab_setup2/config/ur3e/: visual_parameters.yaml
chesslab_setup2/include/ur_chesslab/: chesslab.h  chesslab_setup2_demo.h
chesslab_setup2/launch/: chesslab_gz.launch.py  chesslab_setup2_demo.launch.py  chesslab_view.launch.py
chesslab_setup2/models/: piece_generator.py
chesslab_setup2/models/camera-plugin/: model.config
chesslab_setup2/models/camera_support/: camera_support.sdf  model.config
chesslab_setup2/models/camera_support/meshes/: camera_support.blend  camera_support.dae
chesslab_setup2/models/camera_with_support/: model.config  model.sdf
chesslab_setup2/models/flat_chessboard/: flat_chessboard.sdf
chesslab_setup2/models/flat_chessboard/meshes/: flat_chessboard.dae
chesslab_setup2/models/realsense_camera/: model.sdf
chesslab_setup2/rviz/: chesslab_setup2_demo.rviz  chesslab_setup2_gz.rviz
chesslab_setup2/src/: chesslab.cpp  chesslab_setup2_demo.cpp
chesslab_setup2/tests/: terminal.txt
chesslab_setup2/urdf/: chesslab.urdf.xacro  chesslab_gz.urdf.xacro
chesslab_setup2/worlds/: flat_chesslab.sdf  flat_chesslab_simple.world  ris_chesslab.world
chesslab_setup2_interfaces/: CMakeLists.txt  README.md  package.xml
chesslab_setup2_interfaces/srv/: AttachObj.srv  InverseKinematicsSimple.srv  SetRobConf.srv
final_work/: CMakeLists.txt  README.md  package.xml
final_work/action/: Castling.action  KillPiece.action  MovePiece.action
final_work/config/: chess_board_positions.yaml
final_work/include/final_work/: action_client_node.hpp  castling_node.hpp  chess_interface.hpp  custom_grasps_tf2_broadcaster.hpp  kill_piece_node.hpp  listener_node.hpp  move_piece_node.hpp  piece_ubication_node.hpp
final_work/msg/: PiecePoseArray.msg  PieceUbicationArray.msg
final_work/src/: action_client_node.cpp  castling_action.cpp  chess_interface.cpp  custom_grasps_tf2_broadcaster.cpp  kill_piece_action.cpp  kill_piece_node.cpp  listener_node.cpp  move_piece_action.cpp  move_piece_controller.cpp  piece_ubication_node.cpp
final_work/srv/: SetArucoId.srv
kinenikros2/: CMakeLists.txt  package.xml
kinenikros2/include/kinenikros2/: kinenik.h  kinenik_srv_server.h  kinenik_ur.h
kinenikros2/msg/: InverseKinematics.msg
kinenikros2/src/: kinenik_srv_server.cpp  kinenik_ur.cpp
kinenikros2/srv/: InverseKinematics.srv
robotiq_85_gripper/robotiq_85_description/config/: view_gripper.rviz
robotiq_85_gripper/robotiq_85_description/urdf/: robotiq_85_gripper.urdf.xacro  robotiq_85_gripper_macro.xacro  ur_to_robotiq_adapter_macro.xacro
robotiq_85_gripper/robotiq_85_gz/: CMakeLists.txt  package.xml
robotiq_85_gripper/robotiq_85_gz/config/: robotiq_controllers.yaml
robotiq_85_gripper/robotiq_85_gz/launch/: robotiq_85_sim_control_gz.launch.py
robotiq_85_gripper/robotiq_85_gz/urdf/: robotiq_85_gripper_gz.ros2_control.xacro  robotiq_85_gripper_gz.urdf.xacro
robotiq_85_gripper_server/: CMakeLists.txt  README.md  package.xml
robotiq_85_gripper_server/launch/: robotiq_85_gripper_server.launch.py
robotiq_85_gripper_server/src/: gripper_server.cpp  gripper_server_sim.cpp
robotiq_85_gripper_server/srv/: GripperOpen.srv  GripperOrder.srv
tablesens/: CMakeLists.txt  README.md  package.xml
tablesens/config/: tablesetup-esaii-pl2.yaml  tablesetup-ioc-aruco.yaml  tablesetup-ioc.yaml  tablesetup.yaml
tablesens/include/tablesens/: cameraposfinder.hpp  transformpool.hpp
tablesens/launch/: aruco_realsense.launch.py  realsense_camera.launch.py  tablecalibrator.launch.py
tablesens/msg/: MarkerFixList.msg
tablesens/src/: cameraposfinder.cpp  tablecalibrator.cpp
tablesens/srv/: ConfigureFromService.srv
