<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_broadcaster</name>
  <version>0.0.0</version>
  <description>aruco_broadcaster contains a node that using some parameters, publish or all tf detected by aruco_marker_publisher node or the ones selected from a list.</description>
  <maintainer email="pol.ramon@estudiantat.upc.edu">polrc</maintainer>
  <author>Leopold Palomo-Avellaneda</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>aruco_msgs</depend>

  <!-- Necessary to implement custom interfaces -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
