<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chesslab_setup2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jan.rosell@upc.edu">Jan Rosell</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ur_description</depend>
  <depend>robotiq_85_description</depend>
  <depend>robotiq_85_gz</depend>
  <depend>chesslab_setup2_interfaces</depend>
  <depend>tf</depend>
  <depend>tf_ros</depend>
  <depend>kinenikros2</depend>
  <depend>simple_launch</depend>
  <depend>robotiq_85_gripper_server</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
