<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_85_gripper_server</name>
  <version>0.0.0</version>
  <description>Test package to test gripper.</description>
  <maintainer email="jan.rosell@upc.edu">Jan Rosell</maintainer>
  <license>License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>ros2_controllers</build_depend>
  <build_depend>ignition_ros2_control</build_depend>
  <build_depend>robotiq_85_msgs</build_depend>
  <build_depend>robotiq_85_driver</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>chrono</depend>
  <depend>memory</depend>

   <export>
    <build_type>ament_cmake</build_type>
    <launch_ros export="launch" />
    <ros2_package_share directory="share/robotiq_85_gripper_server"/>
  </export>
</package>
